# -causal-kernel-graph

./: .gitignore  CAG_Collector.py  CAG_Linker.py  Intervention_Engine.py  MATMUL_REASONING_PROMPT.md  NCU_Collector.py  PROPOSAL_V3.md  REASONING_PROMPT.md  TECH_SPEC_CAG.md  generate_matmul_prompt.py  generate_prompt.py  paper.tex  proposal.tex  run_regression_pipeline.py
cag/: __init__.py  attribute.py  capture.py  identity.py  link.py  ncu.py  ncu_pcsample.py  sass_map.py  schema.py  sweep.py
corpus/: CATALOG.md
corpus/matmul/: baseline.py  cag_graph_bank_conflict.jsonl  ncu_bank_conflict.csv  regression_bank_conflicts.py  regression_num_stages.py
corpus/softmax/: baseline.py  regression_num_warps.py
corpus/vector_add/: baseline.py  cag_graph.jsonl  cag_graph_regression.jsonl  compiler_data.json  compiler_data_regression.json  ncu_data.csv  ncu_data_baseline.csv  ncu_data_regression.csv  regression_block_size.py
cpp/: BUILD.md  CMakeLists.txt  CagPassInstrumentation.cpp  CagPassInstrumentation.h
sensitivity_study/: compiler_1024.json  compiler_128.json  compiler_2048.json  compiler_32.json  compiler_512.json  graph_1024.jsonl  graph_128.jsonl  graph_2048.jsonl  graph_32.jsonl  graph_512.jsonl  ncu_1024.csv  ncu_128.csv  ncu_2048.csv  ncu_32.csv  ncu_512.csv  perturbed_BLOCK_SIZE_128.py  perturbed_BLOCK_SIZE_2048.py  perturbed_BLOCK_SIZE_32.py  perturbed_BLOCK_SIZE_512.py
tests/: test_cag.py
